@@ -32,15 +32,18 @@ lazy val root = (project in file("."))
     },
 
     // Fork JVM with enough memory for Spark
+    // Fork JVM with enough memory for Spark
     Compile / run / fork := true,
-    javaOptions ++= Seq(
-      "-Xms512m",
-      "-Xmx2g",
+    Compile / run / javaOptions ++= Seq(
+      "-Xms2g",
+      "-Xmx6g",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
       "--add-opens=java.base/java.nio=ALL-UNNAMED",
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
       "--add-opens=java.base/java.util=ALL-UNNAMED",
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
       "--add-opens=java.base/java.io=ALL-UNNAMED",
-      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
     )
   )
